# organized-koala

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ok.sh  rust-toolchain.toml
.claude/: lint.sh  rumdl.toml  settings.json
.claude/agents/: architect.md  contract-owner.md  eng-manager.md  platform-dev.md  reviewer.md  server-dev.md  tester.md  tui-dev.md  verifier.md
.githooks/: pre-commit  secret-scan.sh
.sqlx/: query-02016b1c0a8b0da1d4825078e4fd39042b629614c35cfbe32be3d8acc6a0b73d.json  query-08edeb2ca6520d48a279bcc24edbadfe5f790f046a255d878ee647a01e739745.json  query-0c54e779c3623765e22c877a37ffc318aa14ffa0ac6242af53329e34aeedbdec.json  query-0d8b0557618ebf7d4d4fc0feacce10e281a4b3a3c6b190d81ae07984f6a72648.json  query-146a3aa5d6a4ab7106e2d5c25d94bd3228edf7e31a93533106a1990372156800.json  query-2111e7519e5ebebf6cd31f2e47a7ba7c66e607bc59b21bafa6774db72123d58f.json  query-26631ffc4f048bf5083847de97f8b6c0b1538a887fb28c592ed1460b5fcd69a0.json  query-2d03b9c7ff81ded3af8bd305a85825cab2bd9f9a0bd070fe617480ff24485c24.json  query-31067c00da1431347c6a7e964f5b5dcc9352fa65f9b4958bcefd00eda85e4d18.json  query-33dca9f06b2b329846adbb4ca5b117499e6b202134baab46a9c1f1c4e434d599.json  query-34ae71cbe8e281b429c3e08e6b9412d7148e566c685af92e43802354fd6b444c.json  query-4adee5738175adefc58b7fccd8ab813d7317622ccc021e6b57e7c01411a8d613.json  query-4fa75bd031d55c49d4b513911fccde5769fb6b5e3ddb869c2795e5edb376833f.json  query-64837f985c929074a6068263b7e9293d0256d0a34c6fb71fe8856fe8fffd9f6b.json  query-67f71765bfa517a7c887e1ed91a1a13355e156147a114ca57a4b19ff2ce6ad7b.json  query-737a7d5f36d70f8b5638a40664a88d05469625be0d9da53f7ee7c86e4cc9ee5d.json  query-8173ac9d2c49057c8373cada2a1e935834b41104283c77e04a9b958a36e293e5.json  query-81d3711563fbfb5458f46f03d5adb324be5715a423a179a6159fbe92b30f6a29.json  query-92f79929e844787413a2fe38d45a0cafdb05a939027ba5169a1394b0437edbbf.json  query-9cb336753a21c081948f99dca70b7cd5a62c3f0e6f0edcac663b4f7a70556597.json  query-a7099054a4f48eaf4e9129057aaec32fe7964a7d37fd81ff74586053ecce0179.json  query-a8da2802a87686d627de7eb6c8ca917907a417fe4846ca0cb87c1063df26e8ac.json  query-ab14cf8bd9065b6ad0ecc2ac8ebe8a22c5c6ab34e68a42c49583bc095fef86e4.json  query-ac1d0ec0cce8812e6aa03b1a9518c0bc149ec3d5f4e043c8d2bea3367361f1ca.json  query-b4de56fe427c506708767ab7e33450905751a249257e4d1e78e72a0074b1f65b.json  query-b5c75b0c6084349ece5d2314fa8c24bd2241c8cc2338cba5af5de4fec7fa7584.json  query-c9c7c5181cc1f56bb7673e5a0d29d0bb169e8b217f9b7a1d7778b5f8e640379b.json  query-cfaa24592fd3ee82ce36913381e8ba38ec3addc30950969d6b3acab32ae160e7.json  query-d4d78434d1ce20f21faa27d62e2a933b2b3e8aa04da0b338b6265efacb5289e0.json  query-d6ea790ad000455f86a29f0c0b7d3989f5fd37941060d4aba5f13087330b24d9.json  query-f14c77a90e4a81f0b84576b93645e5ce4b0cd0577433018c9268666a205ec3b8.json  query-f71a721b48e9ad05c1db2eb233e2a8ef5b5ea0bf2a4936e3c822a1c466766d1e.json  query-fb65f87b01583f83f54477fe6e7557ff90489ddbac50a4caf89254012cc30ef7.json
board/: README.md
board/features/: 0001-foundational-slice.md  0002-contract-crate.md  0003-server-auth-profile-tasks.md  0004-tui-foundational.md  0005-tui-responsive-event-loop.md  0006-tui-mainrs-stale-doccomment.md  0007-ok-coverage-verb.md  0008-pomodoro-timer.md  0009-coverage-in-cycle-and-summary.md  0010-notes.md  0011-task-update-delete-reopen.md  0012-profiles-crud-and-switcher.md  0013-session-token-debug-leak.md  0014-tui-layout-shell.md  0015-tui-dialog-system.md  0016-tui-detail-views-and-hotkeys.md  0017-timer-completion-desktop-notification.md  0018-notes-detail-multiline-content.md  0019-task-subtasks.md  0020-tui-tasks-pane-rendering-overhaul.md  0021-profiles-sorted-by-insertion-time.md  0022-verifier-hermetic-teardown.md  0023-tui-task-date-window-and-filter.md  0024-tui-esc-cancel-notes-profiles-dialogs.md  0025-tui-editable-text-input-cursor.md  0026-error-contract-malformed-query-params.md  0027-confirming-delete-doccomment-fix.md  (+1 more)
crates/contract/: Cargo.toml  README.md
crates/contract/src/: lib.rs
crates/contract/src/auth/: mod.rs
crates/contract/src/error/: mod.rs
crates/contract/src/note/: mod.rs
crates/contract/src/profile/: mod.rs
crates/contract/src/task/: mod.rs
crates/contract/src/timer/: mod.rs
crates/contract/tests/: auth.rs  error.rs  note.rs  profile.rs  subtask.rs  task.rs  timer.rs
crates/organized-koala/: Cargo.toml  README.md
crates/organized-koala/src/: lib.rs
crates/server/: Cargo.toml  README.md
crates/server/migrations/: 20260612163045_users.up.sql  20260612163046_profiles.up.sql  20260612163047_tasks.up.sql  20260612163048_timer.down.sql  20260612163048_timer.up.sql  20260612163049_notes.up.sql  20260612163050_profile_name_unique.down.sql  20260612163050_profile_name_unique.up.sql  20260612163051_subtasks.down.sql  20260612163051_subtasks.up.sql
crates/server/src/: app.rs  config.rs  db.rs  error.rs  extract.rs  lib.rs  main.rs  telemetry.rs
crates/server/src/auth/: jwt.rs  mod.rs  password.rs  session.rs
crates/server/src/handlers/: auth.rs  health.rs  mod.rs  notes.rs  profiles.rs  subtasks.rs  tasks.rs  timer.rs
crates/server/tests/: auth.rs  notes.rs  profile_isolation.rs  profiles.rs  subtasks.rs  tasks.rs  timer.rs
crates/server/tests/common/: mod.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: lib.rs  main.rs
crates/tui/src/app/: auth.rs  main_view.rs  mod.rs  notes.rs  profiles.rs  protocol.rs  task_add.rs  task_detail.rs  task_list.rs  timer.rs  token.rs
crates/tui/src/app/text_input/: mod.rs  tests.rs
crates/tui/src/client/: mod.rs  notify.rs  worker.rs
crates/tui/src/terminal/: mod.rs
crates/tui/src/ui/: mod.rs
crates/tui/tests/: date_window.rs  detail.rs  dialogs.rs  error_branches.rs  flows.rs  in_flight.rs  keybindings.rs  navigation.rs  notes.rs  notifications.rs  profiles.rs  redaction.rs  rendering.rs  subtasks.rs  tasks.rs  text_input.rs  timer.rs
crates/tui/tests/common/: mod.rs
deploy/: Dockerfile  docker-compose.test.yml  docker-compose.yml
docs/: build-plan.md  decisions.md  handoff.md  manual-smoke.md
(+44 files in other folders)
