[package]
name = "contract"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
# Pure-DTO crate: `std` for the type + RFC 3339 (de)serialization, `serde` for the wire
# impls. `clock`/`now`/`wasmbind` are deliberately omitted so this crate carries no
# system-clock or time-source surface.
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
