[package]
name = "tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "tui"
path = "src/lib.rs"

[[bin]]
name = "organized-koala"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
contract = { path = "../contract" }

# Terminal UI + input.
ratatui = "0.29"
crossterm = "0.28"

# HTTP client. `blocking` keeps the client synchronous so the app core can be driven from a
# plain terminal loop without an async runtime; `json` (de)serializes `contract` DTOs.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }

# `serde` provides the `DeserializeOwned` bound used when decoding response bodies; the
# `contract` DTOs supply the impls and `reqwest`'s `json` feature does the (de)serialization.
serde = "1"

# Desktop notifications fired when a focus session completes. Default features only: this keeps
# the pure-Rust `zbus` D-Bus backend on Linux and deliberately leaves the optional C `dbus`/`d`
# (libdbus) feature OFF — so the build needs no `libdbus-1-dev`/`pkg-config`/system `.so`, and a
# future bump cannot silently flip to the C backend. Do NOT enable the `d`/`dbus` feature.
notify-rust = "4"

# Errors: anyhow at the binary top, thiserror for the typed client-boundary error.
anyhow = "1"
thiserror = "2"

[dev-dependencies]
# Test-only: build `contract` DTOs (`Task`/`Profile`, with their `chrono` timestamps) from
# canonical JSON via their derived `Deserialize`, so the suite needs no direct `chrono` dep.
serde_json = "1"
